--- a/index.html
+++ b/index.html
@@ -11,9 +11,50 @@
     <link href="https://fonts.googleapis.com/css2?family=Alice&family=Archivo:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>hi, world</h1>
-    <h2>test</h2>
-    <a href="#">Link</a>
-   
+ <header>
+<nav class="primary">
+  <div>
+    <img src="/assets/icons/List.svg" alt="mais">
+    <h2>Menu</h2>
+  </div>
+  <div><img src="/assets/icons/Tech News.svg" alt="logo"></div>
+  <div>
+    <h2>Buscar</h2>
+    <img src="/assets/icons/MagnifyingGlass.svg" alt="">
+  </div>
+</nav>
+<nav class="secondary">
+  <ul>
+    <li><a href="#">Inteligencia Artificial</a></li>
+    <li><a href="#">Blockchain</a></li>
+    <li><a href="#">Hologramas</a></li>
+    <li><a href="#">Internet</a></li>
+    <li><a href="#">Vestiveis</a></li>
+    <li><a href="#">Realidade Aumentada</a></li>
+    <li><a href="#">Realidade Virtual</a></li>
+  </ul>
+</nav>
+ </header>
+ <main>
+  <div class="conteudo1">
+    <div><p>Robotica</p>
+    <h2>Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.</h2></div>
+    <div>
+      <p>Hologramas</p>
+      <h2>Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!</h2>
+    </div>
+    <div>
+      <p>Internet</p>
+      <h2>Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comunicamos.</h2>
+    </div>
+    <div><p>Vestíveis</p>
+    <h2>Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights valiosos para o bem-estar pessoal.</h2></div>
+    <div>
+      <p>Realidade Virtual</p>
+      <h2>Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem tradicional.</h2>
+    </div>
+  </div>
+  
+ </main>
   </body>
 </html>
