1 conteudo principal e css

--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
  </header>
  <main>
   <div class="conteudo1">
-    <div><p>Robotica</p>
-    <h2>Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.</h2></div>
-    <div>
+    <div class="robotica"><p>Robotica</p>
+    <a href="#">Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.</a></div>
+    <div class="hologramas">
       <p>Hologramas</p>
-      <h2>Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!</h2>
+      <a href="#">Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!</a>
     </div>
-    <div>
-      <p>Internet</p>
-      <h2>Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comunicamos.</h2>
+    <div class="internet">
+      <p >Internet</p>
+      <a href="#">Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comunicamos.</a>
     </div>
-    <div><p>Vestíveis</p>
-    <h2>Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights valiosos para o bem-estar pessoal.</h2></div>
-    <div>
+    <div class="vestiveis"><p>Vestíveis</p>
+    <a href="#">Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights valiosos para o bem-estar pessoal.</a></div>
+    <div class="realidade">
       <p>Realidade Virtual</p>
-      <h2>Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem tradicional.</h2>
+      <a href="#">Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem tradicional.</a>
     </div>
   </div>
   
