--- a/index.html
+++ b/index.html
@@ -54,7 +54,45 @@
       <a href="#">Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem tradicional.</a>
     </div>
   </div>
-  
+  <div class="conteudo2">
+    <div class="visto-recente">
+      <p>Mais lidas da semana</p>
+      <ul>
+        <li class="hover">
+          <a href="">Veja mais<img class="defaut"  src="/assets/icons/ArrowRight-white.svg" alt="seta">
+              <img class="hover" src="/assets/icons/ArrowRight-hover.svg" alt="seta">
+            </a>
+            </li>
+          </ul>
+            </div>
+            <div class="conteudo2menu">
+              <div>
+                <div class="veiculos">
+                  <h2>Veiculos</h2>
+
+                </div>
+                <p>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoais.</p>
+              </div>
+              <div>
+              <div class="hologramas2">
+                <h2>Hologramas</h2>
+              </div>
+              <p>Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamadas virtuais mais realistas e envolventes.</p>
+            </div>
+              <div>
+              <div class="realidade2">
+                <h2>Realidade Virtual</h2>
+              </div> 
+              <p>Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiências de jogo totalmente envolventes.</p>
+            </div>
+            <div>
+              <div class="internet2">
+                <h2>internet</h2>
+              </div>
+              <p>Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.</p>
+            </div>
+            </div>
+  </div>
  </main>
   </body>
 </html>
