--- a/index.html
+++ b/index.html
@@ -71,25 +71,25 @@
                   <h2>Veiculos</h2>
 
                 </div>
-                <p>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoais.</p>
+                <a>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoais.</a>
               </div>
               <div>
               <div class="hologramas2">
                 <h2>Hologramas</h2>
               </div>
-              <p>Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamadas virtuais mais realistas e envolventes.</p>
+              <a>Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamadas virtuais mais realistas e envolventes.</a>
             </div>
               <div>
               <div class="realidade2">
                 <h2>Realidade Virtual</h2>
               </div> 
-              <p>Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiências de jogo totalmente envolventes.</p>
+              <a>Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiências de jogo totalmente envolventes.</a>
             </div>
             <div>
               <div class="internet2">
                 <h2>internet</h2>
               </div>
-              <p>Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.</p>
+              <a>Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.</a>
             </div>
             </div>
   </div>
