--- a/index.html
+++ b/index.html
@@ -134,32 +134,35 @@
     <p>Viu Isso Aqui ?
     </p>
     <div class="conteudo4principal">
-      <div>
+      <div class="conteudo4base">
       <img src="/assets/Image 14.png" alt="">
-      <a href="">Software</a>
+      
+      <div><a href="">Software</a>
       <h2>Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e promovendo a conscientização.</h2>
     </div>
-    <div>
+    </div>
+
+    <div class="conteudo4base">
       <img src="/assets/Image 15.png" alt="">
-      <a href="">Realidade Virtual</a>
-      <h2>Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial completa, imergindo usuários em ambientes digitais.</h2>
+     <div> <a href="">Realidade Virtual</a>
+      <h2>Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial completa, imergindo usuários em ambientes digitais.</h2></div>
     </div>
-    <div>
+    <div class="conteudo4base">
       <img src="/assets/Image 16.png" alt="">
-      <a href="">Criptomoedas</a>
-      <h2>Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o impacto ambiental associado à mineração de criptomoedas.</h2>
+      <div><a href="">Criptomoedas</a>
+      <h2>Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o impacto ambiental associado à mineração de criptomoedas.</h2></div>
+    </div >
+    <div class="conteudo4base">
+   <img src="/assets/Image 17.png" alt="">
+   <div>  <a href="">Drones</a>
+      <h2>Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o cenário do comércio online.</h2></div> 
     </div>
-    <div>
-      <img src="/assets/Image 17.png" alt="">
-      <a href="">DRONES</a>
-      <h2>Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o cenário do comércio online.</h2>
-    </div>
-    <div>
+    <div class="conteudo4base">
       <img src="/assets/Image 18.png" alt="">
-      <a href="">Impressão 3d</a>
+    <div> <a href="">Impressão 3d</a>
       <h2>Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a lista de espera por transplantes.</h2>
+    </div> 
     </div>
-    <div>
     </div>
   </div>
 </div>
